Tighten up the search box

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://use.fontawesome.com/5513e95945.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfmjsT-RvKxn7in_6OEkfFdNlFWqoV73s&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
